Fixed word wrap for comment boxes

--- a/app/assets/stylesheets/modules/activity-feed.css.scss
+++ b/app/assets/stylesheets/modules/activity-feed.css.scss
@@ -131,4 +131,10 @@
       display: none;
     }
   }
+
+  .update-panel {
+    .row {
+      word-wrap: break-word;
+    }
+  }
 }
